# django-labs-toolkit

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/cdk/: main.ts  package.json
.github/workflows/: cdkactions_build-and-publish.yaml
pennlabs/: m2m_mixin.py  mixins.py
pennlabs/emailtools/: apps.py  emails.py  urls.py  views.py
pennlabs/options/: admin.py  models.py  urls.py  views.py
pennlabs/options/management/commands/: setoption.py
pennlabs/options/migrations/: 0001_initial.py
pennlabs/shortener/: admin.py  manager.py  models.py  urls.py  views.py
pennlabs/shortener/migrations/: 0001_initial.py  0002_auto_20181028_1719.py
temporary/: temp.py
tests/: settings.py  test_example.py  urls.py
tests/email/: test_emails.py  test_views.py
tests/emails/: test_emails.py  test_views.py
tests/mixins/: models.py  serializers.py  test_mixins.py
tests/options/: test_models.py  test_views.py
tests/shortener/: test_manager.py  test_models.py  test_views.py
tests/templates/emails/: complicated.html  template.html
tests/test_options/: settings.py  test_commands.py  test_models.py  test_views.py
